--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "uuid": "^3.3.3"
   },
   "scripts": {
