--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -13,6 +13,7 @@
     "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
